--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage":"https://github.com/biswajitmee/errorburner",
   "name": "camera-animation",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "start": "vite",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -46,6 +49,7 @@
     "@types/three": "^0.149.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.0.0",
     "less": "^4.1.3",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
